[package]
name = "arcball"
version = "1.0.0"
authors = ["Will Usher <willusher.life@gmail.com>"]
readme = "README.md"
keywords = ["camera", "arcball", "shoemake", "cgmath"]
license = "MIT"
exclude = [
	".travis.yml",
	".gitignore",
]
description = "An implementation of the Shoemake Arcball camera"
documentation = "http://www.willusher.io/arcball/arcball/"
homepage = "https://github.com/Twinklebear/arcball"
repository = "https://github.com/Twinklebear/arcball"

[dependencies]
cgmath = "0.17.0"

[dev-dependencies]
glium = "0.21.0"

