[package]
name = "arcball"
version = "1.1.0"
authors = ["Will Usher <will@willusher.io>"]
readme = "README.md"
keywords = ["camera", "arcball", "shoemake", "cgmath"]
license = "MIT"
exclude = [
	".gitignore",
]
description = "An implementation of the Shoemake Arcball camera"
documentation = "https://docs.rs/arcball/"
homepage = "https://github.com/Twinklebear/arcball"
repository = "https://github.com/Twinklebear/arcball"
edition = "2021"

[dependencies]
cgmath = "0.18"

[dev-dependencies]
glium = "0.28.0"

